--- a/app/styles/elements/_category-link-card.scss
+++ b/app/styles/elements/_category-link-card.scss
@@ -5,7 +5,7 @@
   height: $prediction-height;
   padding: $prediction-padding;
 
-  background-color: $blue;
+  background-color: $purple;
   color: $white;
   @include box-shadow;
   @include border-box;
