--- a/app/styles/elements/_datepicker.scss
+++ b/app/styles/elements/_datepicker.scss
@@ -166,7 +166,7 @@
 }
 
 .pika-button:hover {
-  color: $blue !important;
+  color: $purple !important;
   background: $white !important;
   @include custom-box-shadow(none !important);
 }
