--- a/app/styles/pages/_predict.scss
+++ b/app/styles/pages/_predict.scss
@@ -36,7 +36,7 @@
   }
 
   .spacer {
-    background-color: $blue;
+    background-color: $purple;
     width: 10rem;
     position: absolute;
     top: 1rem;
@@ -121,8 +121,8 @@
 
       &.on {
         color: $white;
-        background-color: $blue;
-        border-color: $blue;
+        background-color: $purple;
+        border-color: $purple;
       }
     }
   }
@@ -142,7 +142,7 @@
       font-size: 0.8rem; // Same as .h6, @extend wasn't working
       line-height: 1rem; // Same as .h6, @extend wasn't working
       display: inline-block;
-      background-color: $blue;
+      background-color: $purple;
       color: $white;
       padding: 0.25rem 0.5rem;
       margin-bottom: 1rem;
