--- a/app/styles/elements/_footer.scss
+++ b/app/styles/elements/_footer.scss
@@ -8,7 +8,7 @@ footer {
 
   a {
     color: $white;
-    &:hover { text-decoration: underline; }
+    &:hover { color: $white; text-decoration: underline; }
   }
 
   & > .card-grid {
