footer styling fixes

--- a/app/styles/_vars.scss
+++ b/app/styles/_vars.scss
@@ -18,6 +18,7 @@ $very-light-grey: #e5e5e5;
 $light-grey: #999;
 $grey: #666;
 $dark-grey: #111;
+$very-dark-grey: #444;
 
 // spacing
 $grid-max-width: 1140px;
