--- a/app/styles/elements/_footer.scss
+++ b/app/styles/elements/_footer.scss
@@ -3,8 +3,8 @@ footer {
   padding: $full-space 0;
   margin-top: 2rem;
 
-  background-color: darken($very-light-grey, 10);
-  color: $grey;
+  background-color: $very-dark-grey;
+  color: $very-light-grey;
 
   a {
     color: $white;
