--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -1,4 +1,5 @@
-@import url('//yui.yahooapis.com/combo?pure/0.5.0/base-min.css&pure/0.5.0/grids-min.css&pure/0.5.0/forms-min.css');
+@import url('//cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/base-min.css');
+@import url('//cdnjs.cloudflare.com/ajax/libs/pure/0.5.0/grids-min.css');
 
 body, html {
   background-color: $very-light-grey;
