add admin index page and begin logic for special events results submission

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -59,6 +59,7 @@ body {
   width: 100%;
 }
 
+.white { background-color: $white; }
 .purple { background-color: $purple; }
 .blue { background-color: $blue; }
 .red { background-color: $red; }
