make the rendering of user grades optional. hide them on profile page

--- a/app/styles/elements/_user.scss
+++ b/app/styles/elements/_user.scss
@@ -67,12 +67,8 @@
     .affiliation {
       margin: 0.25rem 0 0;
     }
-  }
 
-  &:hover {
-    .grade {
-      top: 0;
-    }
+    &.no-grade { right: 0; }
   }
 
 }
