--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -15,8 +15,20 @@ body {
   @include border-box;
 }
 
+.app-container {
+  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;      /* TWEENER - IE 10 */
+  display: -webkit-flex;     /* NEW - Chrome */
+  display: flex;
+  min-height: 100vh;
+  -webkit-flex-direction: column;
+  flex-direction: column;
+}
+
 .content {
   @extend %clearfix;
+  @include flex(1);
   z-index: 80;
   position: relative;
   width: 100%;
