--- a/app/styles/elements/_hero.scss
+++ b/app/styles/elements/_hero.scss
@@ -6,7 +6,7 @@
   width: ($content-width + 2 * $extension);
   max-width: 100%;
   margin: 0 auto;
-  padding: $header-height 0 2rem;
+  padding: $header-height 0 $header-height/2;
   overflow: hidden;
   @include content-box;
 
