--- a/app/styles/elements/_prediction-card.scss
+++ b/app/styles/elements/_prediction-card.scss
@@ -40,6 +40,10 @@
 
   .text {
     margin: 0;
+
+    &:hover, &:active, &:focus {
+      text-decoration: underline;
+    }
   }
 
   .background {
