first pass for d3 visualization

--- a/app/styles/pages/_prediction.scss
+++ b/app/styles/pages/_prediction.scss
@@ -8,6 +8,8 @@ section.prediction {
     color: $white;
     background-color: $very-dark-grey;
     @include box-shadow;
+
+    svg { float: left; }
   }
 
 }
